# open-chat-cut

./: .dockerignore  .gitignore  AI-CREDITS.md  COMMERCIAL-LICENSE.md  CREATOR-LICENSE.md  Cargo.toml  LICENSE  NOTICE.md  README.md  docker-compose.hosted.yml  docker-compose.yml  package.json
.agents/plugins/: marketplace.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: creator_license.yml
.github/workflows/: openchatcut-ci.yml  paid-provider-smoke.yml  release.yml
LICENSES/: README.md
apps/daemon/: Cargo.toml  Dockerfile.full  README.md
apps/daemon/src/: api.rs  auth.rs  codex_agent.rs  codex_image.rs  config.rs  content_store.rs  error.rs  extract.rs  lib.rs  main.rs  mg_runtime.rs  native_jobs.rs  persistence.rs  project_package.rs  proposal.rs  provider.rs  remote_import.rs  runtime.rs  server.rs  web_capture.rs  worker.rs
apps/daemon/tests/: agent_provider.rs  audio_processing_worker.rs  broll_search.rs  codex_agent.rs  codex_image_generation.rs  export_worker.rs  generated_audio_worker.rs  http_security.rs  managed_media.rs  media_gc.rs  native_job_recovery.rs  nle_export.rs  preview_worker.rs  project_package.rs  project_transactions.rs  provider_generation.rs  remote_transcription.rs  script_tools.rs  timeline_audio_export.rs  tool_proposal_security.rs  transcription_worker.rs  web_capture.rs
apps/landing/: .gitignore  README.md  build.mjs  components.json  next.config.mjs  package.json  source.config.ts  wrangler.jsonc
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json
deploy/hosted/: .env.example  Caddyfile
docs/: acceptance-status.md  distribution.md  mac-studio-model-farm.md
rust/crates/openchatcut-domain/: Cargo.toml
rust/crates/openchatcut-domain/src/: agent.rs  caption.rs  error.rs  export.rs  hash.rs  id.rs  lib.rs  model.rs  motion_graphic.rs  nle_xml.rs  operation.rs  project_check.rs  reducer.rs  story.rs  subtitle.rs  transcript.rs  transcript_analysis.rs  validation.rs  workflow.rs
rust/crates/openchatcut-domain/tests/: domain_engine.rs  transcript_cleanup.rs
scripts/: bun-test-preload.ts  doctor.sh  install-codex-plugin.ps1  install-codex-plugin.sh  install-ffmpeg.ps1  install-ffmpeg.sh  install.ps1  install.sh  openchatcut.ps1  openchatcut.sh  run-media-worker-from-source.py  setup.ps1  setup.sh  verify-cross-platform-smoke.py  verify-export-fixture.py  verify-headless-preview.py  verify-paid-provider-smoke.py
services/media-worker/: README.md  pyproject.toml
services/media-worker/src/openchatcut_worker/: __init__.py  cli.py  denoise.py  errors.py  ffmpeg.py  generate_audio.py  hardware.py  headless.py  protocol.py  runner.py  security.py  transcribe.py
services/media-worker/tests/: test_audio_processing.py  test_export.py  test_generate_audio.py  test_hardware.py  test_headless.py  test_media_derivatives.py  test_protocol.py  test_transcribe.py
(+214 files in other folders)
